The second recipe is finished The index page is updated to link to the second recipe The pasta salad now has ingredients and steps

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/quesadilla.html">Quesidilla</a>
+    <ul>
+        <a href="./recipes/quesadilla.html">Quesidilla</a>
+        <a href="./recipes/pasta_salad.html">Pasta Salad</a>
+    </ul>
 </body>
 </html>
