Added css to previous project result

--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel = "stylesheet" href = "styles.css">
 </head>
-<body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <a href="./recipes/quesadilla.html">Quesidilla</a>
-        <p></p>
-        <a href="./recipes/pasta_salad.html">Pasta Salad</a>
-    </ul>
+<body id = "home">
+    <h1 class = "header">Odin Recipes</h1>
+    <div class = "links">
+        <ul>
+            <a href="./recipes/quesadilla.html">Quesidilla</a>
+            <p></p>
+            <a href="./recipes/pasta_salad.html">Pasta Salad</a>
+        </ul>
+    </div>
 </body>
 </html>
