--- a/recipes/pasta_salad.html
+++ b/recipes/pasta_salad.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pasta Salad</title>
+    <link rel = "stylesheet" href = "../styles.css">
 </head>
-<body>
+<body id = "pasta">
     <h1>Pasta Salad</h1>
     <img src = https://www.allrecipes.com/thmb/jOI__XuTtI-bG8I9Ap5QYoeWP44=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/3512373-pasta-salad-Rick-Whittles-f392323ba4e94b25b3a217fabceb8017.jpeg width = "350", height = "350">
     <h2>A quick recipe perfect for meal prepping</h2>
