--- a/recipes/quesadilla.html
+++ b/recipes/quesadilla.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel = "stylesheet" href = "../styles.css">
 </head>
-<body>
-    <h1>Quesadilla</h1>
+<body id = "quesadilla">
+    <h1 class = "header">Quesadilla</h1>
     <img src = "https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2023%2F01%2F20%2F190839-mashed-potato-quesadilla-Melissa-Goff-4x3-1.jpg&q=60&c=sc&poi=auto&orient=true&h=512" width = "350", height = "350">
-    <h2>A Mexican dish perfect for a quick and easy dinner</h2>
+    <h2 class = "subhead">A Mexican dish perfect for a quick and easy dinner</h2>
     <p>This recipe is made by placing refried beans, cheese, sour cream and salsa inside of a
         tortilla. 
     </p>
